add support to show svn properties for items in the svn browser tree.